Fixed lines remving too much causing maze walls to be slightly broken and added styling to allow UI to be more responsive

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ canvas {
     aspect-ratio: 3 / 2;
     border: 1px solid black ;
     margin-inline: auto;
+    margin-bottom: 2.25rem;
 }
 
 .controls{
@@ -17,5 +18,5 @@ canvas {
     margin: 1.75rem auto;
     display: flex;
     justify-content: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
